external-crates/move/crates/move-compiler/tests/move_check/parser/function_incomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_incomplete.move:6:5
  │
6 │     fun just_type_args<T>
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '('

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_incomplete.move:8:5
  │
8 │     fun just_param<T>(_u: u64)
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '('

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/function_incomplete.move:10:5
   │
10 │     fun just_ret<T>(_u: u64): u64
   │     ^^^
   │     │
   │     Unexpected 'fun'
   │     Expected '{'

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/function_incomplete.move:12:5
   │
12 │     fun everything<T>(u: u64): u64 {
   │     ^^^
   │     │
   │     Unexpected 'fun'
   │     Expected '{'
